Tara.blend from Blender cloud crashes on load #56673

Closed
opened 2018-09-04 01:26:51 +02:00 by Alan Knittel · 8 comments

System Information
Operating system and graphics card

Windows 10 Pro, NVIDIA GTX 1070

Blender Version
Broken: 2.80 Alpha 2
Worked: 2.79b

Tara.blend from Blender Cloud crashes Blender on file open

Exact steps for others to reproduce the error

  1. Open Blender
  2. File Open attached file

Tara.blend

**System Information** Operating system and graphics card Windows 10 Pro, NVIDIA GTX 1070 **Blender Version** Broken: 2.80 Alpha 2 Worked: 2.79b Tara.blend from Blender Cloud crashes Blender on file open **Exact steps for others to reproduce the error** 1. Open Blender 2. File Open attached file [Tara.blend](https://archive.blender.org/developer/F4545504/Tara.blend)
Author

Added subscriber: @AlanKnittel

Added subscriber: @AlanKnittel

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2018-09-04 09:25:14 +02:00

@Sergey pchan_array is NULL during evaluation of pose (from depsgraph)… not sure how this can happen?

@Sergey `pchan_array` is NULL during evaluation of pose (from depsgraph)… not sure how this can happen?

Can not really reproduce the issue, but there is a huge amount of dependency cycles reported. The system became more sensitive to what relations are killable and which are not, so need to think of some solution to this.

Can not really reproduce the issue, but there is a huge amount of dependency cycles reported. The system became more sensitive to what relations are killable and which are not, so need to think of some solution to this.

This issue was referenced by 33ac6c25b9

This issue was referenced by 33ac6c25b9942f40a33382aeb57c73482cd07b27

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

I tested this and it is fixed. The next thing to note is that when I move a controller on the rig, Blender crashes immediately. SHoudl I raise this as a new bug?

I tested this and it is fixed. The next thing to note is that when I move a controller on the rig, Blender crashes immediately. SHoudl I raise this as a new bug?

Yes, always report new bugs. Adding more and more into already handled ones is making things more difficult to follow.

make sure you include all the details, like which exact Blender revision you're using bone you're moving and how many CPU threads you've got. And check on the console messages. Thing is, it worked here with the original fix i did. Wasn't working great (but that's because of dependency cycles), but surely wasn't crashing. Every bit of information is a potential key for a clue! :)

Yes, always report new bugs. Adding more and more into already handled ones is making things more difficult to follow. make sure you include all the details, like which exact Blender revision you're using bone you're moving and how many CPU threads you've got. And check on the console messages. Thing is, it worked here with the original fix i did. Wasn't working great (but that's because of dependency cycles), but surely wasn't crashing. Every bit of information is a potential key for a clue! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56673
No description provided.